[Qt] Fix compilation with newer Qt5 https://bugs.webkit.org/show_bug.cgi?id=77653

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-02-09
Reviewed by Tor Arne Vestbø.

* Api/qgraphicswebview.cpp: Removed unnecessary inclusion of removed header file.
* declarative/public.pri: Use quick1 instead of qtquick1. It's mandator with Qt 5.
* tests/tests.pri: Ditto.
* declarative/qdeclarativewebview_p.h: Fix includes, just use the module-less
version that works with all Qt versions.
* tests/qdeclarativewebview/tst_qdeclarativewebview.cpp: Ditto.

Canonical link: https://commits.webkit.org/95128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107221 268f45cc-cd09-0410-ab3c-d52691b4dbfc